# KryneEngine

./: CMakeLists.txt  KryneEngine.natvis  KryneEngine_lldb.py
.github/workflows/: cmake-linux-vulkan.yml  cmake-macos-metal.yml
CMake/: BuildSystem.cmake  CopyRuntimeDeps.cmake  ResourceUtils.cmake  ShaderBuildCommand.py  ShaderCompilation.cmake  ShaderListParser.py
Core/: CMakeLists.txt
Core/Include/KryneEngine/Core/Common/: Assert.hpp  StringHelpers.hpp  Types.hpp
Core/Include/KryneEngine/Core/Graphics/: Enums.hpp  GraphicsCommon.hpp  GraphicsContext.hpp  RenderPass.hpp
Core/Include/KryneEngine/Core/Math/: Color.hpp  CoordinateSystem.hpp  Hashing.hpp  Matrix.hpp  Matrix33.hpp  Matrix44.hpp  Quaternion.hpp  Transform.hpp  (+6 more)
Core/Src/Common/: BitUtils.cpp  StringHelpers.cpp  additional_impl.cpp
Core/Src/Graphics/: GraphicsContext.cpp
Core/Src/Graphics/DirectX12/: Dx12DescriptorSetManager.cpp  Dx12DescriptorSetManager.hpp  Dx12FrameContext.cpp  Dx12FrameContext.hpp  Dx12GraphicsContext.cpp  Dx12GraphicsContext.hpp  Dx12Resources.cpp  Dx12Resources.h  Dx12SwapChain.cpp  HelperFunctions.hpp
Core/Src/Graphics/Metal/: MetalGraphicsContext.cpp  MetalGraphicsContext.hpp  MetalGraphicsContextInit.cpp  MetalSwapChain.hpp  MetalSwapChain.mm
Core/Src/Graphics/Vulkan/: HelperFunctions.cpp  HelperFunctions.hpp  VkGraphicsContext.cpp  VkGraphicsContext.hpp  VkResources.cpp  VkResources.hpp  VkSwapChain.cpp  VkSwapChain.hpp
Core/Src/Math/: Matrix33.cpp  Matrix44.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
Core/Src/Memory/Allocators/: Allocator.cpp  StackAllocator.cpp  TlsfAllocator.cpp
Core/Src/Memory/Containers/: ConcurrentQueue.cpp
Core/Src/Platform/: StdAlloc.cpp
Core/Src/Platform/Darwin/: CMakeLists.txt  Cpu.cpp  FileSystem.cpp  Ipc.cpp
Core/Src/Platform/Linux/: CMakeLists.txt  Cpu.cpp  FileSystem.cpp  Font.cpp  Ipc.cpp
Core/Src/Platform/Windows/: CMakeLists.txt  Cpu.cpp  FileSystem.cpp  Ipc.cpp
Core/Src/Profiling/: TracyGpuProfilerContext.cpp
Core/Src/Threads/: FibersManager.cpp  HelperFunctions.cpp
Core/Src/Threads/Internal/: FiberContext.hpp
Core/Src/Window/: Window.cpp
Core/Src/Window/Input/: InputManager.cpp
Examples/HelloTriangle/: CMakeLists.txt  HelloTriangle.cpp
Examples/ImGuiDemo/: CMakeLists.txt  main.cpp
Examples/RenderGraphDemo/: CMakeLists.txt  RenderGraphDemo.cpp
Examples/RenderGraphDemo/Rendering/: ColorMappingPass.cpp  DeferredShadingPass.cpp  DeferredShadowPass.cpp  GiPass.cpp  SkyPass.cpp
Examples/RenderGraphDemo/Scene/: OrbitCamera.cpp  SceneManager.cpp  TorusKnotMeshGenerator.cpp
Examples/UiDemo/: CMakeLists.txt  UiCube.cpp  UiCube.hpp  UiDemo.cpp
Modules/: CMakeLists.txt
Modules/FileSystem/: CMakeLists.txt
Modules/FileSystem/Include/KryneEngine/Modules/FileSystem/: Archive.cpp  Archive.hpp  DirectoryTree.hpp  Flags.hpp  ReadOnlyFile.hpp  Utils.hpp  VirtualFileSystem.hpp
Modules/FileSystem/Src/: Archive.cpp  DirectoryTree.cpp  ReadOnlyFile.cpp  Utils.cpp  VirtualFileSystem.cpp
Modules/GraphicsUtils/: CMakeLists.txt
Modules/GraphicsUtils/Src/: DeferredGraphicResourcesDestructor.cpp
Modules/GuiLib/: CMakeLists.txt
Modules/GuiLib/Shaders/BasicGuiRenderer/: Common.slang  Text.slang  TextSlang.shader
Modules/GuiLib/Src/: Context.cpp
Modules/GuiLib/Src/GuiRenderers/: BasicGuiRenderer.cpp
Modules/ImGui/: CMakeLists.txt
Modules/ImGui/Src/: Context.cpp  Helpers.cpp  Input.cpp  Input.hpp
Modules/RenderGraph/: CMakeLists.txt
Modules/RenderGraphDebug/: CMakeLists.txt
Modules/RenderGraphDebug/Src/: ImGuiDebugWindow.cpp
Modules/Resources/: CMakeLists.txt
Modules/Resources/Src/: IResourceManager.cpp  RuntimeResourceSystem.cpp
Modules/Resources/Src/Loaders/: SerialResourceLoader.cpp
Modules/SdfTexture/: CMakeLists.txt
Modules/SdfTexture/Include/KryneEngine/Modules/SdfTexture/: Generator.hpp
Modules/SdfTexture/Src/: Generator.cpp
Modules/ShaderLib/: CMakeLists.txt
Modules/ShaderReflection/: CMakeLists.txt
Modules/TextRendering/: CMakeLists.txt
Modules/TextRendering/Src/: Font.cpp  FontManager.cpp  MsdfAtlasManager.cpp  PreBakedFontFile.cpp  SystemFont.cpp
Modules/TextRendering/Src/FontFiles/: FreetypeFontFile.cpp  PreBakedFontFile.cpp
Tests/: CMakeLists.txt
Tests/Core/: CMakeLists.txt
Tests/Core/Common/: Assert_UnitTests.cpp  CMakeLists.txt
Tests/Core/Graphics/: CMakeLists.txt
Tests/Core/Graphics/GraphicContext/: Buffer_UnitTests.cpp  Common.h  ResourceCopy_UnitTests.cpp  Texture_UnitTests.cpp
Tests/Core/Math/: CMakeLists.txt  Matrix33_UnitTests.cpp  Matrix44_UnitTests.cpp  RotationConversion_UnitTests.cpp  Vector_UnitTests.cpp
Tests/Core/Memory/: CMakeLists.txt  GenerationalPool_UnitTests.cpp  TlsfAllocator_UnitTests.cpp
Tests/Core/Platform/: CMakeLists.txt  Cpu_UnitTests.cpp  FileSystem_UnitTests.cpp
Tests/Core/Threads/: CMakeLists.txt
Tests/Modules/: CMakeLists.txt
Tests/Modules/FileSystem/: CMakeLists.txt  DirectoryTree_UnitTests.cpp  Utils_UnitTests.cpp
Tests/Modules/GraphicsUtils/: CMakeLists.txt
(+55 files in other folders)
